Fix missing buttons on the Edit Bookmark dialog.

This regressed in r454823.

The buttons disappear because a spurious Layout() is triggered when
adding a LabelButton as an extra view on Windows. The GridLayout is
still being set up at this point, so the Layout attempt gets horribly
confused and thinks the button row only needs to be a few pixels high.

The Layout() results when the views::Label inside the dialog's extra
view does a PreferredSizeChanged() when shadows are added to the text on
Windows. MD text buttons do not have shadows, and Mac and Linux never
have text shadows, so they are not affected.

Fix by extending the scope of a bool that tracks when DialogClientView
is manipulating the view hierarchy, and ignore calls to
ChildPreferredSizeChanged() in that case.

BUG=699390
TEST=On Windows, right-click a bookmark and select "Edit". The dialog
should have buttons.

R=pkasting@chromium.org

Review-Url: https://codereview.chromium.org/2737913002 .
Cr-Commit-Position: refs/heads/master@{#455438}

Former-commit-id: 1ffcf3d8575a7cea0a759b7df23e5b45138ed0dd